glibc (2.22-8) UNRELEASED; urgency=medium

  [ Samuel Thibault ]
  * hurd-i386/cvs-gprof-tick.diff: Cherry-pick from upstream to fix gprof
    timing.
  * hurd-i386/cvs-IPV6_PKTINFO.diff: Cherry-pick from upstream to fix
    IPV6_*PKT* macros.

  [ Aurelien Jarno ]
  * Update from upstream stable branch.
  * patches/kfreebsd/local-sysdeps.diff: update to revision 6032 (from
    glibc-bsd) to fix FTBFS. Closes: #822143.
  * patches/arm/unsubmitted-ldconfig-cache-abi.diff: apply fix from Steve
    McIntyre to fix an armhf ABI detection crash in ldconfig on arm64.
    Closes: #822489.
  * debian/control.in/main: upgrade breaks on binutils. This is plainly
    wrong though, glibc should not be a special case: either we don't
    support partial upgrades or we do that for all libraries. With that
    let's hope people will stop reporting bugs, sigh.  Closes: #819165.
  * Drop libc*-i686 packages as GCC now defaults to i686:
    - debian/control: drop packages, add provides and build-depends on
      g++-5 (>= 5.3.1-17) and dpkg-dev (>= 1.18.7).
    - debian/sysdeps/hurd-i386.mk: stop building libc0.3-i686. Use the
      default compiler options to build libc0.3-xen.
    - debian/sysdeps/i386.mk: stop building libc6-i686.
    - debian/sysdeps/kfreebsd-i386.mk: drop.
    - debian/patches/i386/submitted-i686-timing.diff: drop.  Closes:
      #218519.

  [ Adam Conrad ]
  * debian/control.in/libc: Force i686 variants off the system on upgrade.

 -- Samuel Thibault <sthibault@debian.org>  Tue, 19 Apr 2016 23:28:29 +0200

glibc (2.22-7) unstable; urgency=medium

  [ Samuel Thibault ]
  * hurd-i386/submitted-auxv.diff: Update from upstream commit into
    cvs-auxv.diff.
  * hurd-i386/unsubmitted-prof-eintr.diff: Fix recording profiling from
    ext2fs.
  * hurd-i386/submitted-anon-mmap-shared.diff: Disable, actually breaks
    booting hurd-i386.
  * control: Add myself as uploader.

 -- Samuel Thibault <sthibault@debian.org>  Tue, 19 Apr 2016 11:48:08 +0200
