@@ -28111,7 +28111,7 @@
 +#endif /* _SYS_MOUNT_H */
 --- /dev/null
 +++ b/sysdeps/unix/bsd/bsd4.4/kfreebsd/sys/ptrace.h
-@@ -0,0 +1,121 @@
+@@ -0,0 +1,127 @@
 +/*-
 + * Copyright (c) 1984, 1993
 + *	The Regents of the University of California.  All rights reserved.
@@ -28183,12 +28183,18 @@
 +#define	PT_TO_SCX	21
 +#define	PT_SYSCALL	22
 +
++#define	PT_FOLLOW_FORK	23
++
 +#define PT_GETREGS      33	/* get general-purpose registers */
 +#define PT_SETREGS      34	/* set general-purpose registers */
 +#define PT_GETFPREGS    35	/* get floating-point registers */
 +#define PT_SETFPREGS    36	/* set floating-point registers */
 +#define PT_GETDBREGS    37	/* get debugging registers */
 +#define PT_SETDBREGS    38	/* set debugging registers */
++
++#define	PT_VM_TIMESTAMP	40	/* Get VM version (timestamp) */
++#define	PT_VM_ENTRY	41	/* Get VM map (entry) */
++
 +#define PT_FIRSTMACH    64	/* for machine-specific requests */
 +
 +struct ptrace_io_desc {
