@@ -8,8 +8,9 @@ glibc (2.22-8) UNRELEASED; urgency=medium
 
   [ Aurelien Jarno ]
   * Update from upstream stable branch.
-  * patches/kfreebsd/local-sysdeps.diff: update to revision 6032 (from
-    glibc-bsd) to fix FTBFS. Closes: #822143.
+  * patches/kfreebsd/local-sysdeps.diff: update to revision 6051 (from
+    glibc-bsd) to fix FTBFS and provide PT_FOLLOW_FORK in sys/ptrace.h.
+    Closes: #822143, #823387.
   * patches/arm/unsubmitted-ldconfig-cache-abi.diff: apply fix from Steve
     McIntyre to fix an armhf ABI detection crash in ldconfig on arm64.
     Closes: #822489.
